--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "procurement-management-system",
+  "name": "blood-donation-management-system",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -25,6 +25,7 @@
     "core-js": "^2.6.12",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^3.3.0",
+    "ngx-spinner": "^7.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
