--- a/.github/workflows/main_bdms-rad-app.yml
+++ b/.github/workflows/main_bdms-rad-app.yml
@@ -20,17 +20,24 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.x'
-
-      - name: npm install and build
-        run: |
-          npm install
-          npm run build -- --prod --output-path=dist/app
+          
+      - name: Install Dependencies
+        run: npm ci
+      
+      - name: Clean Distribution Directory
+        run: npm run ci:clean
+        
+      - name: Build Application
+        run: npm run ci:build
+        
+      - name: List Files in Distribution Directory
+        run: ls -R ./dist
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
